# ladybug-python

./: .gitignore  CMakeLists.txt  Makefile  README.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: build_pybind_from_subdir.sh  download_lbug.sh
src_cpp/: py_connection.cpp  py_conversion.cpp  py_database.cpp  py_query_result.cpp
src_cpp/include/: py_database.h
src_py/: __init__.py  _backend.py  _lbug_capi.py  async_connection.py  connection.py  database.py  prepared_statement.py  query_result.py  session.py  torch_geometric_feature_store.py  torch_geometric_graph_store.py  torch_geometric_result_converter.py
test/: benchmark_arrow.py  capi_xfails.py  conftest.py  disabled_test_extension.py  ground_truth.py  lbug_test_paths.py  test_arrow.py  test_arrow_memory_backed_table.py  test_async_connection.py  test_blob_parameter.py  test_capi_backend.py  test_connection.py  test_database.py  test_datatype.py  test_df.py  test_dict.py  test_exception.py  test_fsm.py  test_get_header.py  test_helper.py  test_issue.py  test_iteration.py  test_json.py  test_mvcc_bank.py  test_networkx.py  test_parameter.py  test_prepared_statement.py  test_query_result.py  test_query_result_close.py  test_scan_pandas.py  test_scan_pandas_pyarrow.py  test_scan_polars.py  test_scan_pyarrow.py  test_test_helper.py  test_timeout.py  test_torch_geometric.py  test_torch_import_order.py  test_udf.py  test_version.py  test_wal.py  (+1 more)
